--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Music Cognition
-subTitle: "special topics in psychology (PSYC 4541)<br/>CU–Boulder, Summer 2015<br/>Kris Shaffer, Ph.D. – instructor"
+title: Teaching Resources
+subTitle: "Music Theory and Aural Skills<br/>CU–Boulder, Dept. of Music Theory"
 image: synapse.jpg
 ---
