--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 title: Teaching Resources
 subTitle: "Music Theory and Aural Skills<br/>CU–Boulder, Dept. of Music Theory"
-image: synapse.jpg
+image: blackboard.jpg
 ---
